@@ -337,6 +337,18 @@
 
 	* src/main.c (balsa_startup_cb):
 
+	Various: Check GTK_IS_POPOVER() instead of
+	libbalsa_use_popover() when popping down a popover.
+
+	* libbalsa/libbalsa.c (libbalsa_use_popover):
+	* src/balsa-index.c (move_to_change_state):
+	* src/balsa-message.c (open_with_change_state),
+	(copy_part_change_state):
+	* src/balsa-mime-widget-text.c (bmwt_html_open_with_change_state):
+	* src/sendmsg-window.c (change_attach_mode),
+	(attachment_menu_vfs_cb):
+	* src/toolbar-factory.c (tm_set_style_changed):
+
 2020-06-15  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	Various: Implement libbalsa_popup_widget_new() as a wrapper for
